--- a/CSS/About/about.CSS
+++ b/CSS/About/about.CSS
@@ -103,6 +103,7 @@ header{
     width: 275px;
     min-width: 16vw;
     min-height: 140px;
+    max-height: 140px;
     padding: 0.1rem;
     border-radius: 15px;
     background-color: #190a35;
@@ -151,7 +152,9 @@ button{
     animation: do_a_logo 5s linear infinite;
     font-size: 1.2rem;
     font-weight: 700;
+    
 }
+
 button:hover{
     background-color: #271052;
     border: none;
@@ -161,6 +164,10 @@ h2 a{
     list-style-type: none;
     text-decoration: none;
     animation: do_a_logo 5s linear infinite;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 h3 a{
     list-style-type: none;
@@ -180,9 +187,7 @@ h2{
     align-items: center;
     justify-content: center;
 }
-/* .testa{
-    background-color: #190a35;
-} */
+
 @keyframes text{
     100%{
        background-color: #8f62e2;
