--- a/CSS/Contact/contact.css
+++ b/CSS/Contact/contact.css
@@ -152,6 +152,33 @@ opacity: 0;
 
 
 
+.Ram-button{
+    display: flex;
+    width: 180px;
+    height: 30px;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 1vh;
+
+}
+.Ram-button a{
+    color: #DEB992 ;
+    padding-left: 35px;
+}
+
+#opis{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+
+
+
+
+
+
+
 @media screen and (min-height :600px) and (min-width:800px)  {
     header{
         overflow: hidden;
