--- a/CSS/Main/Main.css
+++ b/CSS/Main/Main.css
@@ -41,6 +41,7 @@ header {
   position: sticky;
   z-index: 100;
   height: 8vh;
+  background-color: rgba(24, 8, 20, 0.9176470588);
 }
 
 #header_logo {
