--- a/CSS/Ask/ask.css
+++ b/CSS/Ask/ask.css
@@ -27,6 +27,7 @@ html{
 }
 
 header{
+    background-color: rgba(24, 8, 20, 0.9176470588);
     padding-left: 2%;
     padding-right: 2%;
     width: 100%;
